--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: histomaker
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Histogram Plotting Function
+Version: 0.1.0
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Kelsey", "McGuire", , "kelsey.mcguire@ubc.com", role = c("aut", "cre"))
+Description: This function takes in a dataset and a variable of interest to plot a histogram based on user specified inputs, including variable of interests, fill colours, and outline colours.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports:
+    dplyr,
+    ggplot2,
+    rlang,
+    glue,
+    datateachr
+Suggests:
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
