--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,7 @@ Imports:
     dplyr,
     ggplot2,
     rlang,
-    glue,
-    datateachr
+    glue
 Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
